UF-10673: Removed enum values not used in service
