# src/main/java/se/sundsvall/casedata/api/model/validation/enums/CaseType.java
@@ -10,18 +10,6 @@ import java.util.List;
 @Schema(example = "PARKING_PERMIT")
 public enum CaseType {
 
-	// BYGGR
-	NYBYGGNAD_ANSOKAN_OM_BYGGLOV,
-	ANMALAN_ATTEFALL,
-	// ECOS
-	REGISTRERING_AV_LIVSMEDEL,
-	ANMALAN_INSTALLATION_VARMEPUMP,
-	ANSOKAN_TILLSTAND_VARMEPUMP,
-	ANSOKAN_OM_TILLSTAND_ENSKILT_AVLOPP,
-	ANMALAN_INSTALLATION_ENSKILT_AVLOPP_UTAN_WC,
-	ANMALAN_ANDRING_AVLOPPSANLAGGNING,
-	ANMALAN_ANDRING_AVLOPPSANORDNING,
-	ANMALAN_HALSOSKYDDSVERKSAMHET,
 	// PARKINGPERMIT
 	PARKING_PERMIT,
 	PARKING_PERMIT_RENEWAL,
